# GuideTar

./: .gitignore  .mcp.json  README.md  skills-lock.json
.github/: copilot-instructions.md
backend/: README.md  main.py  pyproject.toml
backend/Models/chord-cnn-lstm-model/: example_chord.lab  main.py  pyproject.toml
backend/Models/chord-cnn-lstm-model/extractors/: torch_helper.py
backend/Models/chord-cnn-lstm-model/mir/nn/: train.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: analytics.py  artists.py  auth.py  billing.py  catalog.py  dechord.py  ear_training.py  favorites.py  health.py  notes.py  support.py  users.py
backend/app/core/: database.py  security.py
backend/app/schemas/: analytics.py  auth.py  billing.py  dechord.py  ear_training.py  support.py  user.py
backend/app/services/: dechord_service.py  ear_training_service.py
backend/supabase/migrations/: 20260426_001_init_guidetar.sql  20260426_002_perf_rls_baseline.sql  20260427_002_catalog_sync.sql  20260427_003_hac_chordbook_schema.sql  20260428_001_follow_artists.sql  20260428_002_dechord_thumbnail.sql
crawler/: .env.example  README.md  main.py  pyproject.toml
crawler/src/crawler/: __init__.py  artist_csv.py  catalog_sync.py  cli.py  config.py  csv_export.py  db.py  ingest.py  models.py  parser.py  youtube_enrich.py
frontend/: BACKEND_HANDOFF.md  PROJECT_STRUCTURE.md  README.md  pubspec.yaml  skills-lock.json
frontend/android/app/: build.gradle.kts
frontend/assets/videos/: README.txt
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
frontend/linux/: CMakeLists.txt
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
(+68 files in other folders)
