[project]
name = "guidetar-crawler"
version = "0.1.0"
description = "Crawler and ingestion pipeline for HopAmChuan chord-book data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "lxml>=6.1.0",
    "pydantic-settings>=2.14.0",
    "tenacity>=9.1.4",
]

[project.scripts]
crawler = "crawler.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crawler"]
