[project]
name = "chord-cnn-lstm-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "figures>=0.3.16",
    "h5py>=2.9.0",
    "jams>=0.3.4",
    "joblib>=0.13.2",
    "librosa>=0.7.2",
    "matplotlib>=2.2.4",
    "mir-eval>=0.5",
    "numpy>=1.19.2",
    "pretty-midi>=0.2.9",
    "pumpp>=0.5.0",
    "pydub>=0.23.1",
    "scikit-learn>=0.23.2",
    "torch>=1.4.0",
]
